--- a/templates/components/carousel.html
+++ b/templates/components/carousel.html
@@ -4,7 +4,7 @@
   data-ride="carousel"
 >
   <ol class="carousel-indicators">
-    <li data-target="#carousel" data-slide-to="0" class="active" ></li>
+    <li data-target="#carousel" data-slide-to="0" class="active"></li>
     <li data-target="#carousel" data-slide-to="1"></li>
     <li data-target="#carousel" data-slide-to="2"></li>
   </ol>
@@ -26,27 +26,26 @@
           <!-- Content -->
           <div class="text-center white-text mx-5 wow fadeIn">
             <h1 class="mb-4">
-              <strong>Learn Bootstrap 4 with MDB</strong>
+              <strong>ABC Brand</strong>
             </h1>
 
             <p>
-              <strong>Best & free guide of responsive web design</strong>
+              <strong>Lorem ipsum dolor sit amet.</strong>
             </p>
 
             <p class="mb-4 d-none d-md-block">
-              <strong
-                >The most comprehensive tutorial for the Bootstrap 4. Loved by
-                over 500 000 users. Video and written versions available. Create
-                your own, stunning website.</strong
-              >
+              <strong>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
+                commodi aliquid voluptate eveniet impedit natus.
+              </strong>
             </p>
 
             <a
               target="_blank"
-              href="https://mdbootstrap.com/education/bootstrap/"
+              href="{% url 'store' %}"
               class="btn btn-outline-white btn-lg"
-              >Start free tutorial
-              <i class="fas fa-graduation-cap ml-2"></i>
+              >Shop Now
+              <i class="fas fa-shopping-cart ml-2"></i>
             </a>
           </div>
           <!-- Content -->
@@ -54,12 +53,11 @@
         <!-- Mask & flexbox options-->
       </div>
     </div>
-
     <div class="carousel-item">
       <div
         class="view"
         style="
-          background-image: url('https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/8-col/img%283%29.jpg');
+          background-image: url('https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/8-col/img%282%29.jpg');
           background-repeat: no-repeat;
           background-size: cover;
         "
@@ -71,27 +69,26 @@
           <!-- Content -->
           <div class="text-center white-text mx-5 wow fadeIn">
             <h1 class="mb-4">
-              <strong>Learn Bootstrap 4 with MDB</strong>
+              <strong>Flat 50% off</strong>
             </h1>
 
             <p>
-              <strong>Best & free guide of responsive web design</strong>
+              <strong>Lorem ipsum dolor sit amet.</strong>
             </p>
 
             <p class="mb-4 d-none d-md-block">
-              <strong
-                >The most comprehensive tutorial for the Bootstrap 4. Loved by
-                over 500 000 users. Video and written versions available. Create
-                your own, stunning website.</strong
-              >
+              <strong>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
+                commodi aliquid voluptate eveniet impedit natus.
+              </strong>
             </p>
 
             <a
               target="_blank"
-              href="https://mdbootstrap.com/education/bootstrap/"
+              href="{% url 'store' %}"
               class="btn btn-outline-white btn-lg"
-              >Start free tutorial
-              <i class="fas fa-graduation-cap ml-2"></i>
+              >Shop Now
+              <i class="fas fa-shopping-cart ml-2"></i>
             </a>
           </div>
           <!-- Content -->
@@ -99,12 +96,11 @@
         <!-- Mask & flexbox options-->
       </div>
     </div>
-
     <div class="carousel-item">
       <div
         class="view"
         style="
-          background-image: url('https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/8-col/img%285%29.jpg');
+          background-image: url('https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/8-col/img%282%29.jpg');
           background-repeat: no-repeat;
           background-size: cover;
         "
@@ -116,27 +112,26 @@
           <!-- Content -->
           <div class="text-center white-text mx-5 wow fadeIn">
             <h1 class="mb-4">
-              <strong>Learn Bootstrap 4 with MDB</strong>
+              <strong>ABC Brand</strong>
             </h1>
 
             <p>
-              <strong>Best & free guide of responsive web design</strong>
+              <strong>Lorem ipsum dolor sit amet.</strong>
             </p>
 
             <p class="mb-4 d-none d-md-block">
-              <strong
-                >The most comprehensive tutorial for the Bootstrap 4. Loved by
-                over 500 000 users. Video and written versions available. Create
-                your own, stunning website.</strong
-              >
+              <strong>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
+                commodi aliquid voluptate eveniet impedit natus.
+              </strong>
             </p>
 
             <a
               target="_blank"
-              href="https://mdbootstrap.com/education/bootstrap/"
+              href="{% url 'store' %}"
               class="btn btn-outline-white btn-lg"
-              >Start free tutorial
-              <i class="fas fa-graduation-cap ml-2"></i>
+              >Shop Now
+              <i class="fas fa-shopping-cart ml-2"></i>
             </a>
           </div>
           <!-- Content -->
@@ -144,7 +139,7 @@
         <!-- Mask & flexbox options-->
       </div>
     </div>
-  </div>
+
 
   <a
     class="carousel-control-prev"
