--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -3,12 +3,7 @@
 {% block content %}
   <div class="container-fluid mt-5">
       <div class="row wow fadeIn">
-        <div class="col-md-8 mb-4">
-          <div class="card">
-            some chart
-          </div>
-        </div>
-        <div class="col-md-4 mb-4">
+        <div class="col-md-4 mb-4 mx-auto">
           <div class="card">
             <div class="card-header">Order this month</div>
             <div class="card-body">
