--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -34,6 +34,11 @@
         <li class="nav-item">
           <a class="nav-link waves-effect" href="{% url 'contact' %}">Contact</a>
         </li>
+        {% if request.user.is_superuser %}
+        <li class="nav-item">
+          <a class="nav-link waves-effect" href="{% url 'dashboard' %}">Dashboard</a>
+        </li>
+        {% endif %}
       </ul>
 
       <!-- Right -->
