--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -55,7 +55,7 @@ Checkout |
         {% endif %}
 
         <div id="shpping-info">
-          <h4>Sipping Address</h4>
+          <h4>Shipping Address</h4>
           <div class="md-form mb-5">
             {{ form_s.address_s }}
             <label for="{{ form_s.address_s.id_for_label }}">Address</label>
