--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -28,12 +28,6 @@
         <li class="nav-item">
           <a class="nav-link waves-effect" href="{% url 'store' %}">Store</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link waves-effect" href="{% url 'about' %}">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link waves-effect" href="{% url 'contact' %}">Contact</a>
-        </li>
         {% if request.user.is_superuser %}
         <li class="nav-item">
           <a class="nav-link waves-effect" href="{% url 'dashboard' %}">Dashboard</a>
@@ -53,7 +47,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Welcome, {{user.get_short_name}}</a>
+          <span class="nav-link">Welcome, {{user.get_short_name}}</span>
         </li>
         {% else %}
         <li class="nav-item">
