--- a/templates/dashboard/order_summary.html
+++ b/templates/dashboard/order_summary.html
@@ -1,4 +1,5 @@
 {% extends "dashboard/base.html" %}
+{% load crispy_forms_tags %}
 {% block content %}
   <div class="row wow fadeIn">
     <div class="col-md-12 mb-4">
@@ -92,7 +93,17 @@
         </div>
       </div>
     </div>
-    
+  </div>
+
+  <div class="row wow fadeIn">
+    <div class="col-md-10 mx-auto">
+      <h2>Delivery Status</h2>
+      <form action="." method="post">
+        {% csrf_token %}
+        {{form|crispy}}
+        <button class="btn btn-primary">Save</button>
+      </form>
+    </div>
   </div>
 
 {% endblock content %}
