--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -12,7 +12,7 @@
           <div class="p-4">
 
             <div class="mb-3">
-              <a href="">
+              <a href="{% url 'category_detail' product.category.slug %}">
                 <span class="badge purple mr-1">{{ product.category }}</span>
               </a>
             </div>
